--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -54,3 +54,9 @@ div.product {
     width: 100%;
   }
 }
+
+div.flash-success {
+  background: $accent;
+  color: $white;
+  padding: 10px 20px 10px 20px;
+}
