--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,6 +2,12 @@
 
 <%= simple_format @product.description %>
 
+<%= simple_form_for [@product, @order_item] do |f| %>
+  <%= f.input :quantity %>
+  
+  <%= f.button :submit, "Add to cart" %>
+<% end %>
+
 <p>
   <%= link_to "Back to all products", products_path %>
 </p>
